--- a/ground/templates/welcome.html
+++ b/ground/templates/welcome.html
@@ -39,7 +39,7 @@
     }
 </style> -->
 <body>
-   
+   {% include "navbar.html" %}
     <br><br>
     {% block content %}
     <div class="container">
