--- a/ground/templates/base.html
+++ b/ground/templates/base.html
@@ -18,7 +18,7 @@
 <style>
 </style>
 <body>
-    <!-- {% include "navbar.html" %}  -->
+    {% include "navbar.html" %} 
     {% block content %}
     <h1 class='text-center' style="font-family: 'Acme', sans-serif;"> Photos for {{date|date:"l d-F Y"}} </h1> {% endblock %} {% block scripts %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.40/js/uikit.min.js"></script>
