--- a/ground/templates/profile.html
+++ b/ground/templates/profile.html
@@ -5,15 +5,16 @@
 
 
 <div class="container">
-
+    <br>
   <div class="row">
+   
     <div class="col-md-3">
       {% if user.profile_pic %}
-      <img src="{{user.profile_pic.url}}" class="rounded img-fluid" alt="" width="200" height="200">
+      <img src="{{user.profile_pic.url}}"  alt="" width="200" height="200">
       {% else %}
       <img
         src="https://i0.wp.com/www.winhelponline.com/blog/wp-content/uploads/2017/12/user.png?fit=256%2C256&quality=100&ssl=1"
-        class="rounded img-fluid" alt="" width="200" height="200">
+         alt="" width="200" height="200">
       {% endif %}
     </div>
 
@@ -22,7 +23,7 @@
       
 
       {% if user == current_user %}
-      <a href="">
+      <a href="{% url 'edit-profile' %}">
         <button class="btn btn-dark" type="button" name="button"><img
             src="https://img.icons8.com/color/48/000000/pencil.png" width="24">Edit Profile</button>
       </a>
