--- a/ground/templates/navbar.html
+++ b/ground/templates/navbar.html
@@ -13,12 +13,13 @@
     <nav class="navbar navbar-dark bg-dark " role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-
+              <a class="navbar-brand" href="/" style=" font-family: 'Acme', sans-serif;">Home</a>
             </div>
 
             <!-- Adding a search form -->
             <div class="navbar-right">
-                <a class="navbar-brand" href="{% url 'profile' request.user.id %}" style=" font-family: 'Acme', sans-serif;">Profile</a>
+               
+              <a class="navbar-brand" href="{% url 'profile' request.user.id %}" style=" font-family: 'Acme', sans-serif;">Profile</a>
             </div>
             <!-- search form end -->
 
