display playgrounds on index page

--- a/ground/templates/registration/login.html
+++ b/ground/templates/registration/login.html
@@ -10,10 +10,6 @@
     </div>
 
     <div class="col-md-3">
-      <div class="phones">
-        <img class="screen-image" src="{% static 'images/insta-screen.png' %}" alt="" width="80%" height="80%"
-          style="margin-top: 20%;">
-      </div>
     </div>
     <div class="col-md-5" style="margin-top: 5%;">
 
@@ -25,9 +21,7 @@
 
         <div class="card-body">
           <div class="logo-header">
-            <img class="text-center"
-              src='https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/100px-Instagram_logo.svg.png'
-              id='logo-name' style="width: 30%;height:20%;">
+            <h1>Playground</h1>
           </div>
           <div class="text-center">
             <form action="/accounts/login/" method="post">
