--- a/ground/templates/registration/registration_form.html
+++ b/ground/templates/registration/registration_form.html
@@ -10,10 +10,6 @@
     </div>
 
     <div class="col-md-3">
-      <div class="phones">
-        <img class="screen-image" src="{% static 'images/insta-screen.png' %}" alt="" width="80%" height="80%"
-          style="margin-top: 20%;">
-      </div>
     </div>
 
     <div class="col-md-5" style="margin-top: 5%;">
@@ -26,9 +22,7 @@
 
         <div class="card-body">
           <div class="logo-header">
-            <img class="text-center"
-              src='https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png'
-              style="width: 30%;height:20%;" id='logo-name'>
+            <h1>Playground</h1>
           </div>
           <div class="text-center">
             <form action="/accounts/register/" method="post">
