display playgrounds on index page

--- a/ground/templates/welcome.html
+++ b/ground/templates/welcome.html
@@ -58,8 +58,8 @@
           <img style=" margin-top: 10px; margin-bottom: 5px;width:350px; height:200px;" src="{{image.photo.url}}"
             class="img-thumbnail photo" alt="Image">
           <hr class="uk-divider-icon">
-          <p class="uk-card-title" style="color: black;font-family: 'Acme', sans-serif;">{{image.location}}</p>
-          <p class="uk-card-title" style="color: black;font-family: 'Acme', sans-serif;">{{image.description}}</p>
+          <p class="uk-card-title" style="color: black;font-family: 'Acme', sans-serif;">Location:{{image.location}}</p>
+          <p class="uk-card-title" style="color: black;font-family: 'Acme', sans-serif;">Description:{{image.description}}</p>
         </div>
       </div>
     </div>
